<resources>
    <!-- Standard -->
    <string name="app_name">Mäd Feedback</string>
    <string name="title_activity_onboarding">Welcome to Mäd Feedback!</string>

    <!-- Onboarding -->
    <string name="section_1_title">Welcome to Mäd Feedback!</string>
    <string name="section_1_desc">
        Thank you for taking the time to help us at <b><font color="#FF0000">Mäd</font></b>
        serve you better. Your feedback is extremely important to us as it ensures that we are
        moving in the right direction for continued team growth and client satisfaction.
    </string>
    <string name="section_2_title">Specific Feedback Categories.</string>
    <string name="section_2_desc">
        To ensure that we are focusing our attention in all of the right places, you can give us
        a rating and a few words in these five (5) primary categories:
        <b><font color="#FF0000">Quality</font></b>,
        <b><font color="#FF0000">Speed</font></b>,
        <b><font color="#FF0000">Value</font></b>,
        <b><font color="#FF0000">Creativity</font></b> and
        <b><font color="#FF0000">Strategy</font></b>.
    </string>
    <string name="section_3_title">A Company That Cares.</string>
    <string name="section_3_desc">
        By providing us with your feedback through this app, we ensure that all of the
        relevant project heads, management team and founders receive a copy of your feedback,
        so don\'t worry about having your comments filtered by a public relations team.
    </string>

    <!-- User Type Selection -->
    <string name="action_text"><b>Let\'s get started.</b></string>
    <string name="user_type_prompt">Which of these best\n describes you?</string>
    <string name="client_button_text">I am a Client</string>
    <string name="employee_button_text">I am an Employee</string>

    <!-- Feedback Screens -->
    <string name="in_progress_button">Next »</string>
    <string name="completed_button">Submit</string>
    <string name="comments_hint_text">Enter any additional comments here...</string>

    <string name="category_1_title">Category 1</string>
    <string name="category_1_name">Quality</string>
    <string name="category_2_title">Category 2</string>
    <string name="category_2_name">Speed</string>
    <string name="category_3_title">Category 3</string>
    <string name="category_3_name">Value</string>
    <string name="category_4_title">Category 4</string>
    <string name="category_4_name">Creativity</string>
    <string name="category_5_title">Category 5</string>
    <string name="category_5_name">Strategy</string>

    <!-- Completion Screen -->
    <string name="success_title">Success!</string>
    <string name="success_message">
        Your feedback has been submitted to our team.\n
        Thanks for helping to make us better!
    </string>
    <string name="error_title">Oops...</string>
    <string name="error_message">
        It seems like something went wrong.\n
        Please try again later!
    </string>
    <string name="close_btn_text">Close</string>
</resources>
